--- a/leptospirosis.html
+++ b/leptospirosis.html
@@ -57,22 +57,42 @@
     </div>
     
     <h2><i class="fas fa-user-md"></i> แบบคัดกรองผู้ป่วยสงสัยโรคฉี่หนู</h2>
+
     <form id="leptospirosisForm">
+<div class="mb-4 p-3" style="border: 2px solid #007bff; border-radius: 8px; background-color: #e9f7ff;">
+        <label class="form-label" style="font-size: 1.1rem; font-weight: bold; color: #007bff;">การแสดงความยินยอมให้ข้อมูล (PDPA Consenting)</label>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="pdpaConsent" value="ยินยอม" required>
+          <label class="form-check-label" for="pdpaConsent" style="font-size: 1rem; font-weight: 600;">ยินยอมให้ข้อมูล</label>
+        </div>
+      </div>
       <div class="mb-3">
         <label for="reporterName" class="form-label">ชื่อ-สกุล (ผู้ให้ข้อมูล)</label>
-        <input type="text" class="form-control" id="reporterName" required>
+        <div class="input-group">
+          <span class="input-group-text"><i class="fas fa-user"></i></span>
+          <input type="text" class="form-control" id="reporterName" placeholder="หากไม่มีให้เว้นว่าง" style="color: #6c757d;">
+        </div>
       </div>
       <div class="mb-3">
         <label for="reporterPhone" class="form-label">เบอร์โทรศัพท์ (ผู้ให้ข้อมูล)</label>
-        <input type="tel" class="form-control" id="reporterPhone" required>
+        <div class="input-group">
+          <span class="input-group-text"><i class="fas fa-phone"></i></span>
+          <input type="tel" class="form-control" id="reporterPhone" placeholder="หากไม่มีให้เว้นว่าง" style="color: #6c757d;">
+        </div>
       </div>
       <div class="mb-3">
-        <label for="patientName" class="form-label">ชื่อ-สกุล (ผู้ป่วย)</label>
-        <input type="text" class="form-control" id="patientName" required>
+        <label for="patientName" class="form-label">ชื่อ-สกุล (ผู้ป่วยที่มีอาการสงสัย)</label>
+        <div class="input-group">
+          <span class="input-group-text"><i class="fas fa-user"></i></span>
+          <input type="text" class="form-control" id="patientName" required>
+        </div>
       </div>
       <div class="mb-3">
-        <label for="patientPhone" class="form-label">เบอร์โทรศัพท์ (ผู้ป่วย)</label>
-        <input type="tel" class="form-control" id="patientPhone" required>
+        <label for="patientPhone" class="form-label">เบอร์โทรศัพท์ (ผู้ป่วยที่มีอาการสงสัย)</label>
+        <div class="input-group">
+          <span class="input-group-text"><i class="fas fa-phone"></i></span>
+          <input type="tel" class="form-control" id="patientPhone" required>
+        </div>
       </div>
       <div class="mb-3">
         <label for="occupation" class="form-label">อาชีพ</label>
@@ -87,7 +107,10 @@
       </div>
       <div class="mb-3">
         <label for="address" class="form-label">บ้านเลขที่</label>
-        <input type="text" class="form-control" id="address" required>
+        <div class="input-group">
+          <span class="input-group-text"><i class="fas fa-home"></i></span>
+          <input type="text" class="form-control" id="address" required>
+        </div>
       </div>
       <div class="mb-3">
         <label for="villageNumber" class="form-label">หมู่ที่</label>
@@ -101,10 +124,139 @@
           <option>ปาล์มพัฒนา</option>
         </select>
       </div>
+      <div class="mb-3">
+        <label for="illnessStartDate" class="form-label">วันที่เริ่มมีอาการป่วย</label>
+        <div class="input-group">
+          <span class="input-group-text"><i class="fas fa-calendar-alt"></i></span>
+          <input type="date" class="form-control" id="illnessStartDate" required>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">มีไข้สูงเฉียบพลันหรือไม่ (4 คะแนน)</label>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="fever" id="feverYes" value="มี" required>
+          <label class="form-check-label" for="feverYes">มี</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="fever" id="feverNo" value="ไม่มี" required>
+          <label class="form-check-label" for="feverNo">ไม่มี</label>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">มีอาการตาแดงหรือไม่ (4 คะแนน)</label>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="redEyes" id="redEyesYes" value="มี" required>
+          <label class="form-check-label" for="redEyesYes">มี</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="redEyes" id="redEyesNo" value="ไม่มี" required>
+          <label class="form-check-label" for="redEyesNo">ไม่มี</label>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">มีอาการคอแข็งหรือไม่ (4 คะแนน)</label>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="stiffNeck" id="stiffNeckYes" value="มี" required>
+          <label class="form-check-label" for="stiffNeckYes">มี</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="stiffNeck" id="stiffNeckNo" value="ไม่มี" required>
+          <label class="form-check-label" for="stiffNeckNo">ไม่มี</label>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">มีอาการปวดกล้ามเนื้อและกดเจ็บ โดยเฉพาะน่อง โคนขา และหลัง (4 คะแนน)</label>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="musclePain" id="musclePainYes" value="มี" required>
+          <label class="form-check-label" for="musclePainYes">มี</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="musclePain" id="musclePainNo" value="ไม่มี" required>
+          <label class="form-check-label" for="musclePainNo">ไม่มี</label>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">มีอาการปวดศรีษะเฉียบพลันหรือไม่ (2 คะแนน)</label>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="headache" id="headacheYes" value="มี" required>
+          <label class="form-check-label" for="headacheYes">มี</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="headache" id="headacheNo" value="ไม่มี" required>
+          <label class="form-check-label" for="headacheNo">ไม่มี</label>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">มีอาการตัวเหลือง ตาเหลือง</label>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="jaundice" id="jaundiceYes" value="มี" required>
+          <label class="form-check-label" for="jaundiceYes">มี</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="jaundice" id="jaundiceNo" value="ไม่มี" required>
+          <label class="form-check-label" for="jaundiceNo">ไม่มี</label>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">มีอาการเหล่านี้หรือไม่</label>
+        <select class="form-select" id="symptoms" required>
+          <option value="">กรุณาเลือก</option>
+          <option>มีน้ำมูก</option>
+          <option>มีน้ำมูกร่วมกับไอเจ็บคอ</option>
+          <option>ไม่มีอาการดังกล่าว</option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">มีพฤติกรรมเสี่ยงต่อไปนี้หรือไม่ (เลือกตอบได้หลายข้อ)</label>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="riskFarming" value="ทำนา ทำไร่ ทำสวน">
+          <label class="form-check-label" for="riskFarming">ทำนา ทำไร่ ทำสวน</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="riskFishing" value="หาปู หาปลา หากบเขียด">
+          <label class="form-check-label" for="riskFishing">หาปู หาปลา หากบเขียด</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="riskRats" value="จับหนู ชำแหละหนู">
+          <label class="form-check-label" for="riskRats">จับหนู ชำแหละหนู</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="riskAnimals" value="เลี้ยงสัตว์">
+          <label class="form-check-label" for="riskAnimals">เลี้ยงสัตว์</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="riskMud" value="ย่ำในน้ำ โคลนตม ที่ชื้นแฉะ">
+          <label class="form-check-label" for="riskMud">ย่ำในน้ำ โคลนตม ที่ชื้นแฉะ</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="riskSwimming" value="แช่หรือว่ายน้ำในแหล่งน้ำ">
+          <label class="form-check-label" for="riskSwimming">แช่หรือว่ายน้ำในแหล่งน้ำ</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="riskOther" value="อื่นๆ">
+          <label class="form-check-label" for="riskOther">อื่นๆ</label>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="infectionArea" class="form-label">พื้นที่ที่คาดว่าจะติดเชื้อโรคไข้ฉี่หนู</label>
+        <input type="text" class="form-control" id="infectionArea" required>
+      </div>
+      <div class="mb-3">
+        <label for="serviceArea" class="form-label">ท่านอยู่ในเขตบริการของหน่วยบริการใด</label>
+        <select class="form-select" id="serviceArea" required>
+          <option value="">กรุณาเลือก</option>
+          <option>โรงพยาบาลมะนัง</option>
+          <option>รพ.สต.ปาล์มพัฒนา</option>
+          <option>รพ.สต.บ้านมะนัง</option>
+          <option>รพ.สต.บ้านผัง 50</option>
+          <option>สถานีอนามัยบ้านผัง 15 (สอน)</option>
+        </select>
+      </div>
       <div class="submit-btn">
         <button type="button" class="btn btn-primary" onclick="submitForm()">ส่งข้อมูล</button>
       </div>
     </form>
+    
   </div>
   
   <script>
