--- a/leptospirosis.html
+++ b/leptospirosis.html
@@ -168,7 +168,7 @@
         </div>
       </div>
       <div class="mb-3">
-        <label class="form-label">มีอาการตัวเหลือง ตาเหลือง</label>
+        <label class="form-label">มีอาการตัวเหลือง ตาเหลือง (2 คะแนน)</label>
         <div class="form-check">
           <input class="form-check-input" type="radio" name="jaundice" id="jaundiceYes" value="มี" required>
           <label class="form-check-label" for="jaundiceYes">มี</label>
