--- a/leptospirosis.html
+++ b/leptospirosis.html
@@ -56,9 +56,8 @@
     </div>
     
     <h2><i class="fas fa-user-md"></i> แบบคัดกรองผู้ป่วยสงสัยโรคฉี่หนู</h2>
-
-    <form id="leptospirosisForm">
-      <div class="mb-4 p-3" style="border: 2px solid #007bff; border-radius: 8px; background-color: #e9f7ff;">
+  <form id="leptospirosisForm">
+<div class="mb-4 p-3" style="border: 2px solid #007bff; border-radius: 8px; background-color: #e9f7ff;">
         <label class="form-label" style="font-size: 1.1rem; font-weight: bold; color: #007bff;">การแสดงความยินยอมให้ข้อมูล (PDPA Consenting)</label>
         <div class="form-check">
           <input class="form-check-input" type="checkbox" id="pdpaConsent" value="ยินยอม" required>
@@ -67,19 +66,31 @@
       </div>
       <div class="mb-3">
         <label for="reporterName" class="form-label">ชื่อ-สกุล (ผู้ให้ข้อมูล)</label>
-        <input type="text" class="form-control" id="reporterName" required>
+        <div class="input-group">
+          <span class="input-group-text"><i class="fas fa-user"></i></span>
+          <input type="text" class="form-control" id="reporterName" placeholder="หากไม่มีให้เว้นว่าง" style="color: #6c757d;">
+        </div>
       </div>
       <div class="mb-3">
         <label for="reporterPhone" class="form-label">เบอร์โทรศัพท์ (ผู้ให้ข้อมูล)</label>
-        <input type="tel" class="form-control" id="reporterPhone" required>
+        <div class="input-group">
+          <span class="input-group-text"><i class="fas fa-phone"></i></span>
+          <input type="tel" class="form-control" id="reporterPhone" placeholder="หากไม่มีให้เว้นว่าง" style="color: #6c757d;">
+        </div>
       </div>
       <div class="mb-3">
         <label for="patientName" class="form-label">ชื่อ-สกุล (ผู้ป่วยที่มีอาการสงสัย)</label>
-        <input type="text" class="form-control" id="patientName" required>
+        <div class="input-group">
+          <span class="input-group-text"><i class="fas fa-user"></i></span>
+          <input type="text" class="form-control" id="patientName" required>
+        </div>
       </div>
       <div class="mb-3">
         <label for="patientPhone" class="form-label">เบอร์โทรศัพท์ (ผู้ป่วยที่มีอาการสงสัย)</label>
-        <input type="tel" class="form-control" id="patientPhone" required>
+        <div class="input-group">
+          <span class="input-group-text"><i class="fas fa-phone"></i></span>
+          <input type="tel" class="form-control" id="patientPhone" required>
+        </div>
       </div>
       <div class="mb-3">
         <label for="occupation" class="form-label">อาชีพ</label>
@@ -94,7 +105,10 @@
       </div>
       <div class="mb-3">
         <label for="address" class="form-label">บ้านเลขที่</label>
-        <input type="text" class="form-control" id="address" required>
+        <div class="input-group">
+          <span class="input-group-text"><i class="fas fa-home"></i></span>
+          <input type="text" class="form-control" id="address" required>
+        </div>
       </div>
       <div class="mb-3">
         <label for="villageNumber" class="form-label">หมู่ที่</label>
@@ -110,7 +124,10 @@
       </div>
       <div class="mb-3">
         <label for="illnessStartDate" class="form-label">วันที่เริ่มมีอาการป่วย</label>
-        <input type="date" class="form-control" id="illnessStartDate" required>
+        <div class="input-group">
+          <span class="input-group-text"><i class="fas fa-calendar-alt"></i></span>
+          <input type="date" class="form-control" id="illnessStartDate" required>
+        </div>
       </div>
       <div class="mb-3">
         <label class="form-label">มีไข้สูงเฉียบพลันหรือไม่ (4 คะแนน)</label>
@@ -146,7 +163,7 @@
         </div>
       </div>
       <div class="mb-3">
-        <label class="form-label">มีอาการปวดกล้ามเนื้อและกดเจ็บ (4 คะแนน)</label>
+        <label class="form-label">มีอาการปวดกล้ามเนื้อและกดเจ็บ โดยเฉพาะน่อง โคนขา และหลัง (4 คะแนน)</label>
         <div class="form-check">
           <input class="form-check-input" type="radio" name="musclePain" id="musclePainYes" value="มี" required>
           <label class="form-check-label" for="musclePainYes">มี</label>
@@ -188,7 +205,7 @@
         </select>
       </div>
       <div class="mb-3">
-        <label class="form-label">มีพฤติกรรมเสี่ยงต่อไปนี้หรือไม่</label>
+        <label class="form-label">มีพฤติกรรมเสี่ยงต่อไปนี้หรือไม่ (เลือกตอบได้หลายข้อ)</label>
         <div class="form-check">
           <input class="form-check-input" type="checkbox" id="riskFarming" value="ทำนา ทำไร่ ทำสวน">
           <label class="form-check-label" for="riskFarming">ทำนา ทำไร่ ทำสวน</label>
@@ -205,10 +222,22 @@
           <input class="form-check-input" type="checkbox" id="riskAnimals" value="เลี้ยงสัตว์">
           <label class="form-check-label" for="riskAnimals">เลี้ยงสัตว์</label>
         </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="riskMud" value="ย่ำในน้ำ โคลนตม ที่ชื้นแฉะ">
+          <label class="form-check-label" for="riskMud">ย่ำในน้ำ โคลนตม ที่ชื้นแฉะ</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="riskSwimming" value="แช่หรือว่ายน้ำในแหล่งน้ำ">
+          <label class="form-check-label" for="riskSwimming">แช่หรือว่ายน้ำในแหล่งน้ำ</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="riskOther" value="อื่นๆ">
+          <label class="form-check-label" for="riskOther">อื่นๆ</label>
+        </div>
       </div>
       <div class="mb-3">
         <label for="infectionArea" class="form-label">พื้นที่ที่คาดว่าจะติดเชื้อโรคไข้ฉี่หนู</label>
-        <input type="text" class="form-control" id="infectionArea" required>
+        <input type="text" class="form-control" id="infectionArea">
       </div>
       <div class="mb-3">
         <label for="serviceArea" class="form-label">ท่านอยู่ในเขตบริการของหน่วยบริการใด</label>
@@ -217,6 +246,8 @@
           <option>โรงพยาบาลมะนัง</option>
           <option>รพ.สต.ปาล์มพัฒนา</option>
           <option>รพ.สต.บ้านมะนัง</option>
+          <option>รพ.สต.บ้านผัง 50</option>
+          <option>สถานีอนามัยบ้านผัง 15 (สอน)</option>
         </select>
       </div>
       <div class="submit-btn">
