--- a/leptospirosis.html
+++ b/leptospirosis.html
@@ -259,13 +259,14 @@
       </div>
 
       <div class="submit-btn">
-        <button id="calculateScoreButton">คำนวณคะแนน</button>
+        <button type="button" class="btn btn-primary" id="calculateScoreButton" onclick="calculateScore()">คำนวณคะแนน</button>
         <button type="button" class="btn btn-primary" onclick="submitForm()">ส่งข้อมูล</button>
       </div>
     </form>
   </div>
 
-  <script>
+
+<script>
     let userId = "";
     let username = "";
     let profileLoaded = false;
@@ -305,33 +306,31 @@
       let score = 0;
 
       // Adding scores based on the selected options
-      if (document.querySelector('input[name="fever"]:checked').value === "มี") score += 4;
-      if (document.querySelector('input[name="redEyes"]:checked').value === "มี") score += 4;
-      if (document.querySelector('input[name="stiffNeck"]:checked').value === "มี") score += 4;
-      if (document.querySelector('input[name="musclePain"]:checked').value === "มี") score += 4;
-      if (document.querySelector('input[name="headache"]:checked').value === "มี") score += 2;
-      if (document.querySelector('input[name="jaundice"]:checked').value === "มี") score += 2;
+      if (document.querySelector('input[name="fever"]:checked')?.value === "มี") score += 4;
+      if (document.querySelector('input[name="redEyes"]:checked')?.value === "มี") score += 4;
+      if (document.querySelector('input[name="stiffNeck"]:checked')?.value === "มี") score += 4;
+      if (document.querySelector('input[name="musclePain"]:checked')?.value === "มี") score += 4;
+      if (document.querySelector('input[name="headache"]:checked')?.value === "มี") score += 2;
+      if (document.querySelector('input[name="jaundice"]:checked')?.value === "มี") score += 2;
 
       // Update total score display
       document.getElementById('totalScore').value = score;
+
+      // Show alert with result
+      let resultMessage;
+      if (score > 10) {
+        resultMessage = 'คะแนนความเสี่ยงของท่านคือ ' + score + '. กรุณาเดินทางไปยังโรงพยาบาลหรือหน่วยบริการใกล้บ้านเพื่อตรวจวินิจฉัยเบื้องต้นโดยด่วน!';
+      } else {
+        resultMessage = 'คะแนนความเสี่ยงของท่านคือ ' + score + '. ขอบคุณที่กรอกแบบฟอร์ม!';
+      }
+
+      Swal.fire({
+        title: 'ผลการคำนวณคะแนน',
+        text: resultMessage,
+        icon: 'info',
+        confirmButtonText: 'ตกลง'
+      });
     }
-    function calculatetotalScore() {
-    let totalScore = 0;
-    // ... (การคำนวณคะแนนที่มีอยู่)
-
-    let resultMessage;
-    if (totalScore > 10) {
-        resultMessage = 'คะแนนความเสี่ยงของท่านคือ ' + totalScore + '. กรุณาเดินทางไปยังโรงพยาบาลหรือหน่วยบริการใกล้บ้านเพื่อตรวจวินิจฉัยเบื้องต้นโดยด่วน!';
-    } else {
-        resultMessage = 'คะแนนความเสี่ยงของท่านคือ ' + totalScore + '. ขอบคุณที่กรอกแบบฟอร์ม!';
-    }
-
-    alert(resultMessage); // แสดงผลคะแนน
-}
-
-    document.getElementById("calculatetotalScoreButton").onclick = function() {
-    calculatetotalScore();
-};
 
     function submitForm() {
       if (!profileLoaded) {
@@ -370,7 +369,7 @@
       calculateScore();
 
       const formData = {
-        pdpaConsent: document.getElementById('pdpaConsent') ? 'ยินยอม' : '',
+        pdpaConsent: document.getElementById('pdpaConsent').checked ? 'ยินยอม' : '',
         reporterName: document.getElementById('reporterName').value,
         reporterPhone: document.getElementById('reporterPhone').value,
         patientName: document.getElementById('patientName').value,
@@ -379,53 +378,23 @@
         address: document.getElementById('address').value,
         villageNumber: document.getElementById('villageNumber').value,
         subdistrict: document.getElementById('subdistrict').value,
-        illnessStartDate: document.getElementById('illnessStartDate').value,
-        fever: document.querySelector('input[name="fever"]:checked').value,
-        redEyes: document.querySelector('input[name="redEyes"]:checked').value,
-        stiffNeck: document.querySelector('input[name="stiffNeck"]:checked').value,
-        musclePain: document.querySelector('input[name="musclePain"]:checked').value,
-        headache: document.querySelector('input[name="headache"]:checked').value,
-        jaundice: document.querySelector('input[name="jaundice"]:checked').value,
-        symptoms: document.getElementById('symptoms').value,
-        riskFactors: Array.from(document.querySelectorAll('input[type="checkbox"]:checked')).map(checkbox => checkbox.value),
-        infectionArea: document.getElementById('infectionArea').value,
-        serviceArea: document.getElementById('serviceArea').value,
-        totalScore: document.getElementById('totalScore').value, // Add total score to formData
+        district: document.getElementById('district').value,
+        province: document.getElementById('province').value,
+        symptoms: {
+          fever: document.querySelector('input[name="fever"]:checked')?.value,
+          redEyes: document.querySelector('input[name="redEyes"]:checked')?.value,
+          stiffNeck: document.querySelector('input[name="stiffNeck"]:checked')?.value,
+          musclePain: document.querySelector('input[name="musclePain"]:checked')?.value,
+          headache: document.querySelector('input[name="headache"]:checked')?.value,
+          jaundice: document.querySelector('input[name="jaundice"]:checked')?.value
+        },
+        totalScore: document.getElementById('totalScore').value,
         userId: userId,
         username: username
       };
 
-      fetch("https://script.google.com/macros/s/AKfycbxjVHoh5l2kd8FTnLsmeSmIHbxTP6fzXYO6Q4H6jI5PRt5C89V-BT0gMiZrSJRLebEHVg/exec", {
-        method: "POST",
-        body: JSON.stringify(formData)
-      })
-     .then(response => {
-        if (response.ok) {
-          let message = totalScore > 10 ? 
-            'คะแนนความเสี่ยงของท่านคือ ' + totalScore + '. กรุณาเดินทางไปยังโรงพยาบาลหรือหน่วยบริการใกล้บ้านเพื่อตรวจวินิจฉัยเบื้องต้นโดยด่วน!' : 
-            'คะแนนความเสี่ยงของท่านคือ ' + totalScore + '. ขอบคุณที่กรอกแบบฟอร์ม!';
-
-          Swal.fire({
-            title: 'ส่งข้อมูลเรียบร้อย',
-            text: 'ข้อมูลของท่านได้ถูกส่งเรียบร้อยแล้ว ขอบคุณครับ',
-            icon: 'success',
-            confirmButtonText: 'ตกลง'
-          }).then(() => {
-            location.reload();
-          });
-        } else {
-          throw new Error('Network response was not ok.');
-        }
-      })
-      .catch(error => {
-        console.error('There was a problem with the fetch operation:', error);
-        Swal.fire({
-          title: 'เกิดข้อผิดพลาด',
-          text: 'ไม่สามารถส่งข้อมูลได้ กรุณาลองใหม่อีกครั้ง',
-          icon: 'error',
-          confirmButtonText: 'ตกลง'
-        });
-      });
+      console.log('Submitting form data:', formData);
+      // Here you can use fetch or axios to send formData to your server
     }
   </script>
 </body>
