--- a/leptospirosis.html
+++ b/leptospirosis.html
@@ -1,3 +1,4 @@
+จากโค้ดชุดนี้ทำงานได้โอเคแล้ว ติดอย่างเดียว พอ sweetalert แสดง แล้วกดตกลง มันไม่ยอมปิด
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -300,75 +301,76 @@
       });
     }
 
+    function calculateScore() {
+      let score = 0;
 
-function calculateScore() {
-    let score = 0;
+      // Adding scores based on the selected options
+      if (document.querySelector('input[name="fever"]:checked')?.value === "มี") score += 4;
+      if (document.querySelector('input[name="redEyes"]:checked')?.value === "มี") score += 4;
+      if (document.querySelector('input[name="stiffNeck"]:checked')?.value === "มี") score += 4;
+      if (document.querySelector('input[name="musclePain"]:checked')?.value === "มี") score += 4;
+      if (document.querySelector('input[name="headache"]:checked')?.value === "มี") score += 2;
+      if (document.querySelector('input[name="jaundice"]:checked')?.value === "มี") score += 2;
 
-    // Adding scores based on the selected options
-    if (document.querySelector('input[name="fever"]:checked')?.value === "มี") score += 4;
-    if (document.querySelector('input[name="redEyes"]:checked')?.value === "มี") score += 4;
-    if (document.querySelector('input[name="stiffNeck"]:checked')?.value === "มี") score += 4;
-    if (document.querySelector('input[name="musclePain"]:checked')?.value === "มี") score += 4;
-    if (document.querySelector('input[name="headache"]:checked')?.value === "มี") score += 2;
-    if (document.querySelector('input[name="jaundice"]:checked')?.value === "มี") score += 2;
+      // Update total score display
+      document.getElementById('totalScore').value = score;
 
-    // Update total score display
-    document.getElementById('totalScore').value = score;
-
-    // Show alert with result
-    let resultMessage;
-    if (score > 10) {
+      // Show alert with result
+      let resultMessage;
+      if (score > 10) {
         resultMessage = 'คะแนนความเสี่ยงของท่านคือ ' + score + '. กรุณาเดินทางไปยังโรงพยาบาลหรือหน่วยบริการใกล้บ้านเพื่อตรวจวินิจฉัยเบื้องต้นโดยด่วน!';
-    } else {
+      } else {
         resultMessage = 'คะแนนความเสี่ยงของท่านคือ ' + score + '. ขอบคุณที่กรอกแบบฟอร์ม!';
-    }
+      }
 
-    Swal.fire({
+      Swal.fire({
         title: 'ผลการคำนวณคะแนน',
         text: resultMessage,
         icon: 'info',
         confirmButtonText: 'ตกลง'
-    }).then(() => {
-        // เรียกใช้ฟังก์ชัน submitForm() ที่นี่หลังจากปิด SweetAlert
+      }).then(() => {
+        // ส่งข้อมูลอัตโนมัติ
         submitForm();
-    });
-}
-
-function submitForm() {
-    if (!profileLoaded) {
-        Swal.fire({
-            title: 'เกิดข้อผิดพลาด',
-            text: 'ไม่สามารถดึงข้อมูลผู้ใช้จาก LINE ได้ กรุณาลองใหม่อีกครั้ง',
-            icon: 'error',
-            confirmButtonText: 'ตกลง'
-        });
-        return;
+      });
     }
 
-    const form = document.getElementById('leptospirosisForm');
-    let valid = true;
+    function submitForm() {
+      if (!profileLoaded) {
+        Swal.fire({
+          title: 'เกิดข้อผิดพลาด',
+          text: 'ไม่สามารถดึงข้อมูลผู้ใช้จาก LINE ได้ กรุณาลองใหม่อีกครั้ง',
+          icon: 'error',
+          confirmButtonText: 'ตกลง'
+        });
+        return;
+      }
 
-    form.querySelectorAll('input, select').forEach(field => {
+      const form = document.getElementById('leptospirosisForm');
+      let valid = true;
+
+      form.querySelectorAll('input, select').forEach(field => {
         if (!field.checkValidity()) {
-            field.classList.add('alert-field');
-            valid = false;
+          field.classList.add('alert-field');
+          valid = false;
         } else {
-            field.classList.remove('alert-field');
+          field.classList.remove('alert-field');
         }
-    });
+      });
 
-    if (!valid) {
+      if (!valid) {
         Swal.fire({
-            title: 'กรุณากรอกข้อมูลให้ครบถ้วน',
-            text: 'มีบางฟิลด์ที่ยังไม่ได้กรอกหรือกรอกไม่ครบถ้วน',
-            icon: 'warning',
-            confirmButtonText: 'ตกลง'
+          title: 'กรุณากรอกข้อมูลให้ครบถ้วน',
+          text: 'มีบางฟิลด์ที่ยังไม่ได้กรอกหรือกรอกไม่ครบถ้วน',
+          icon: 'warning',
+          confirmButtonText: 'ตกลง'
         });
         return;
-    }
+      }
 
-    // Prepare form data
-const formData = {
+      // Calculate score before submitting
+      calculateScore();
+
+      const formData = {
         pdpaConsent: document.getElementById('pdpaConsent').checked ? 'ยินยอม' : '',
         reporterName: document.getElementById('reporterName').value,
         reporterPhone: document.getElementById('reporterPhone').value,
@@ -392,18 +394,6 @@ const formData = {
         userId: userId,
         username: username
       };
-
-    // ส่งข้อมูลผ่าน AJAX หรือวิธีที่คุณใช้ในการส่งข้อมูล
-    // ...
-
-    Swal.fire({
-        title: 'สำเร็จ',
-        text: 'ข้อมูลของท่านถูกส่งเรียบร้อยแล้ว',
-        icon: 'success',
-        confirmButtonText: 'ตกลง'
-    });
-}
-
 
       console.log('Submitting form data:', formData);
       // Here you can use fetch or axios to send formData to your server
