--- a/leptospirosis.html
+++ b/leptospirosis.html
@@ -530,22 +530,6 @@ function submitForm() {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!-- <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -801,7 +785,7 @@ function submitForm() {
         </select>
       </div>
       <!-- New Score Calculation Section -->
-      <div class="mb-3">
+<!--       <div class="mb-3">
         <label for="totalScore" class="form-label">คะแนนรวม</label>
         <input type="text" class="form-control" id="totalScore" readonly>
       </div>
@@ -965,8 +949,9 @@ function submitForm() {
       document.getElementById('leptospirosisForm').reset();
     }
 </script>
-
+ -->
 
 </body>
 </html>
+
  -->
