--- a/leptospirosis.html
+++ b/leptospirosis.html
@@ -300,195 +300,101 @@
       });
     }
 
-    // function calculateScore() {
-    //   let score = 0;
+    function calculateScore() {
+      let score = 0;
 
-    //   // Adding scores based on the selected options
-    //   if (document.querySelector('input[name="fever"]:checked')?.value === "มี") score += 4;
-    //   if (document.querySelector('input[name="redEyes"]:checked')?.value === "มี") score += 4;
-    //   if (document.querySelector('input[name="stiffNeck"]:checked')?.value === "มี") score += 4;
-    //   if (document.querySelector('input[name="musclePain"]:checked')?.value === "มี") score += 4;
-    //   if (document.querySelector('input[name="headache"]:checked')?.value === "มี") score += 2;
-    //   if (document.querySelector('input[name="jaundice"]:checked')?.value === "มี") score += 2;
+      // Adding scores based on the selected options
+      if (document.querySelector('input[name="fever"]:checked')?.value === "มี") score += 4;
+      if (document.querySelector('input[name="redEyes"]:checked')?.value === "มี") score += 4;
+      if (document.querySelector('input[name="stiffNeck"]:checked')?.value === "มี") score += 4;
+      if (document.querySelector('input[name="musclePain"]:checked')?.value === "มี") score += 4;
+      if (document.querySelector('input[name="headache"]:checked')?.value === "มี") score += 2;
+      if (document.querySelector('input[name="jaundice"]:checked')?.value === "มี") score += 2;
 
-    //   // Update total score display
-    //   document.getElementById('totalScore').value = score;
+      // Update total score display
+      document.getElementById('totalScore').value = score;
 
-    //   // Show alert with result
-    //   let resultMessage;
-    //   if (score > 10) {
-    //     resultMessage = 'คะแนนความเสี่ยงของท่านคือ ' + score + '. กรุณาเดินทางไปยังโรงพยาบาลหรือหน่วยบริการใกล้บ้านเพื่อตรวจวินิจฉัยเบื้องต้นโดยด่วน!';
-    //   } else {
-    //     resultMessage = 'คะแนนความเสี่ยงของท่านคือ ' + score + '. ขอบคุณที่กรอกแบบฟอร์ม!';
-    //   }
-
-    //   Swal.fire({
-    //     title: 'ผลการคำนวณคะแนน',
-    //     text: resultMessage,
-    //     icon: 'info',
-    //     confirmButtonText: 'ตกลง'
-    //   }).then(() => {
-    //     // ส่งข้อมูลอัตโนมัติ
-    //     submitForm();
-    //   });
-    // }
-
-    // function submitForm() {
-    //   if (!profileLoaded) {
-    //     Swal.fire({
-    //       title: 'เกิดข้อผิดพลาด',
-    //       text: 'ไม่สามารถดึงข้อมูลผู้ใช้จาก LINE ได้ กรุณาลองใหม่อีกครั้ง',
-    //       icon: 'error',
-    //       confirmButtonText: 'ตกลง'
-    //     });
-    //     return;
-    //   }
-
-    //   const form = document.getElementById('leptospirosisForm');
-    //   let valid = true;
-
-    //   form.querySelectorAll('input, select').forEach(field => {
-    //     if (!field.checkValidity()) {
-    //       field.classList.add('alert-field');
-    //       valid = false;
-    //     } else {
-    //       field.classList.remove('alert-field');
-    //     }
-    //   });
-
-    //   if (!valid) {
-    //     Swal.fire({
-    //       title: 'กรุณากรอกข้อมูลให้ครบถ้วน',
-    //       text: 'มีบางฟิลด์ที่ยังไม่ได้กรอกหรือกรอกไม่ครบถ้วน',
-    //       icon: 'warning',
-    //       confirmButtonText: 'ตกลง'
-    //     });
-    //     return;
-    //   }
-
-    //   // Calculate score before submitting
-    //   calculateScore();
-
-    //   const formData = {
-    //     pdpaConsent: document.getElementById('pdpaConsent').checked ? 'ยินยอม' : '',
-    //     reporterName: document.getElementById('reporterName').value,
-    //     reporterPhone: document.getElementById('reporterPhone').value,
-    //     patientName: document.getElementById('patientName').value,
-    //     patientPhone: document.getElementById('patientPhone').value,
-    //     occupation: document.getElementById('occupation').value,
-    //     address: document.getElementById('address').value,
-    //     villageNumber: document.getElementById('villageNumber').value,
-    //     subdistrict: document.getElementById('subdistrict').value,
-    //     district: document.getElementById('district').value,
-    //     province: document.getElementById('province').value,
-    //     symptoms: {
-    //       fever: document.querySelector('input[name="fever"]:checked')?.value,
-    //       redEyes: document.querySelector('input[name="redEyes"]:checked')?.value,
-    //       stiffNeck: document.querySelector('input[name="stiffNeck"]:checked')?.value,
-    //       musclePain: document.querySelector('input[name="musclePain"]:checked')?.value,
-    //       headache: document.querySelector('input[name="headache"]:checked')?.value,
-    //       jaundice: document.querySelector('input[name="jaundice"]:checked')?.value
-    //     },
-    //     totalScore: document.getElementById('totalScore').value,
-    //     userId: userId,
-    //     username: username
-    //   };
-
-  function calculateScore() {
-    let score = 0;
-
-    // Adding scores based on the selected options
-    if (document.querySelector('input[name="fever"]:checked')?.value === "มี") score += 4;
-    if (document.querySelector('input[name="redEyes"]:checked')?.value === "มี") score += 4;
-    if (document.querySelector('input[name="stiffNeck"]:checked')?.value === "มี") score += 4;
-    if (document.querySelector('input[name="musclePain"]:checked')?.value === "มี") score += 4;
-    if (document.querySelector('input[name="headache"]:checked')?.value === "มี") score += 2;
-    if (document.querySelector('input[name="jaundice"]:checked')?.value === "มี") score += 2;
-
-    // Update total score display
-    document.getElementById('totalScore').value = score;
-
-    // Show alert with result
-    let resultMessage;
-    if (score > 10) {
+      // Show alert with result
+      let resultMessage;
+      if (score > 10) {
         resultMessage = 'คะแนนความเสี่ยงของท่านคือ ' + score + '. กรุณาเดินทางไปยังโรงพยาบาลหรือหน่วยบริการใกล้บ้านเพื่อตรวจวินิจฉัยเบื้องต้นโดยด่วน!';
-    } else {
+      } else {
         resultMessage = 'คะแนนความเสี่ยงของท่านคือ ' + score + '. ขอบคุณที่กรอกแบบฟอร์ม!';
-    }
+      }
 
-    // Return result message for later use
-    return resultMessage;
-}
-
-function submitForm() {
-    if (!profileLoaded) {
-        Swal.fire({
-            title: 'เกิดข้อผิดพลาด',
-            text: 'ไม่สามารถดึงข้อมูลผู้ใช้จาก LINE ได้ กรุณาลองใหม่อีกครั้ง',
-            icon: 'error',
-            confirmButtonText: 'ตกลง'
-        });
-        return;
-    }
-
-    const form = document.getElementById('leptospirosisForm');
-    let valid = true;
-
-    form.querySelectorAll('input, select').forEach(field => {
-        if (!field.checkValidity()) {
-            field.classList.add('alert-field');
-            valid = false;
-        } else {
-            field.classList.remove('alert-field');
-        }
-    });
-
-    if (!valid) {
-        Swal.fire({
-            title: 'กรุณากรอกข้อมูลให้ครบถ้วน',
-            text: 'มีบางฟิลด์ที่ยังไม่ได้กรอกหรือกรอกไม่ครบถ้วน',
-            icon: 'warning',
-            confirmButtonText: 'ตกลง'
-        });
-        return;
-    }
-
-    // Calculate score before submitting
-    const resultMessage = calculateScore();
-
-    Swal.fire({
+      Swal.fire({
         title: 'ผลการคำนวณคะแนน',
         text: resultMessage,
         icon: 'info',
         confirmButtonText: 'ตกลง'
-    }).then(() => {
-        // Here we would send the form data
-        const formData = {
-            pdpaConsent: document.getElementById('pdpaConsent').checked ? 'ยินยอม' : '',
-            reporterName: document.getElementById('reporterName').value,
-            reporterPhone: document.getElementById('reporterPhone').value,
-            patientName: document.getElementById('patientName').value,
-            patientPhone: document.getElementById('patientPhone').value,
-            occupation: document.getElementById('occupation').value,
-            address: document.getElementById('address').value,
-            villageNumber: document.getElementById('villageNumber').value,
-            subdistrict: document.getElementById('subdistrict').value,
-         district: document.getElementById('district').value,
-          province: document.getElementById('province').value,
-          symptoms: {
-            fever: document.querySelector('input[name="fever"]:checked')?.value,
-            redEyes: document.querySelector('input[name="redEyes"]:checked')?.value,
-            stiffNeck: document.querySelector('input[name="stiffNeck"]:checked')?.value,
-            musclePain: document.querySelector('input[name="musclePain"]:checked')?.value,
-            headache: document.querySelector('input[name="headache"]:checked')?.value,
-            jaundice: document.querySelector('input[name="jaundice"]:checked')?.value
-          },
-          totalScore: document.getElementById('totalScore').value,
-          userId: userId,
-          username: username
-        };
+      }).then(() => {
+        // ส่งข้อมูลอัตโนมัติ
+        submitForm();
+      });
+    }
 
+    function submitForm() {
+      if (!profileLoaded) {
+        Swal.fire({
+          title: 'เกิดข้อผิดพลาด',
+          text: 'ไม่สามารถดึงข้อมูลผู้ใช้จาก LINE ได้ กรุณาลองใหม่อีกครั้ง',
+          icon: 'error',
+          confirmButtonText: 'ตกลง'
+        });
+        return;
+      }
 
+      const form = document.getElementById('leptospirosisForm');
+      let valid = true;
+
+      form.querySelectorAll('input, select').forEach(field => {
+        if (!field.checkValidity()) {
+          field.classList.add('alert-field');
+          valid = false;
+        } else {
+          field.classList.remove('alert-field');
+        }
+      });
+
+      if (!valid) {
+        Swal.fire({
+          title: 'กรุณากรอกข้อมูลให้ครบถ้วน',
+          text: 'มีบางฟิลด์ที่ยังไม่ได้กรอกหรือกรอกไม่ครบถ้วน',
+          icon: 'warning',
+          confirmButtonText: 'ตกลง'
+        });
+        return;
+      }
+
+      // Calculate score before submitting
+      calculateScore();
+
+      const formData = {
+        pdpaConsent: document.getElementById('pdpaConsent').checked ? 'ยินยอม' : '',
+        reporterName: document.getElementById('reporterName').value,
+        reporterPhone: document.getElementById('reporterPhone').value,
+        patientName: document.getElementById('patientName').value,
+        patientPhone: document.getElementById('patientPhone').value,
+        occupation: document.getElementById('occupation').value,
+        address: document.getElementById('address').value,
+        villageNumber: document.getElementById('villageNumber').value,
+        subdistrict: document.getElementById('subdistrict').value,
+        district: document.getElementById('district').value,
+        province: document.getElementById('province').value,
+        symptoms: {
+          fever: document.querySelector('input[name="fever"]:checked')?.value,
+          redEyes: document.querySelector('input[name="redEyes"]:checked')?.value,
+          stiffNeck: document.querySelector('input[name="stiffNeck"]:checked')?.value,
+          musclePain: document.querySelector('input[name="musclePain"]:checked')?.value,
+          headache: document.querySelector('input[name="headache"]:checked')?.value,
+          jaundice: document.querySelector('input[name="jaundice"]:checked')?.value
+        },
+        totalScore: document.getElementById('totalScore').value,
+        userId: userId,
+        username: username
+      };
+
+ 
         // Send formData to server (not shown)
     });
 }
